<resources>
    <string name="app_name">Twitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="signup_text_login">No Account? Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_login">Already have an account? Go to Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_tweet_text">What\'s Up</string>
    <string name="edit_about">About</string>
    <string name="edit_phone_number">Phone Number</string>
    <string name="edit_username">Username</string>
    <string name="edit_update">Update</string>
    <string name="default_about">Nothing to show</string>
    <string name="edit_verify">Verify</string>
    <string name="hint_about">About</string>
    <string name="hint_phone">Phone</string>
</resources>