<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/customToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Edit Your Profile"
                app:titleTextColor="@android:color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_usernameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_below="@id/customToolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phoneTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_usernameTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_aboutTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_phoneTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAbout"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="140dp"
                    android:hint="@string/hint_about"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_aboutTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="162dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="161dp"
                android:background="@drawable/standard_button_rounded"
                android:text="@string/edit_update"
                android:textColor="@color/white" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>